update business logic for nurse service - big change
