# module/major/usecase/commands/dto.cmd.go
@@ -1,5 +1,0 @@
-package majorcommands
-
-type CreateMajorCmdDTO struct {
-	Name string `json:"name"`
-}
